--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=FinanceManagerAPI
+server.port=8442
+
+spring.datasource.url=jdbc:sqlserver://DESKTOP-I8L6QRQ\UAT_SERVER:1433;databaseName=FM-DB;encrypt=false;trustServerCertificate=true
+spring.datasource.username=API
+spring.datasource.password=Goldbed@!@#
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.properties.hibernate.use_sql_comments=true
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+# WebFlux CORS Configuration
+spring.webflux.cors.allowed-origin-patterns=http://*.example.com
+spring.webflux.cors.allow-credentials=true
+# Optional: For CORS Methods and Headers (if needed)
+spring.webflux.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.webflux.cors.allowed-headers=*
+# Disable CSRF (if Spring Security was implicitly included)
+security.csrf.enabled=false
