--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,15 @@
 spring.application.name=FinanceManagerAPI
 server.port=8442
 
-spring.datasource.url=jdbc:sqlserver://DESKTOP-I8L6QRQ\UAT_SERVER:1433;databaseName=FM-DB;encrypt=false;trustServerCertificate=true
-spring.datasource.username=API
+spring.datasource.url=jdbc:postgresql://localhost:5432/FinDash
+spring.datasource.username=sa
 spring.datasource.password=Goldbed@!@#
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.properties.hibernate.use_sql_comments=true
-# JPA Configuration
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Optional Hibernate configs
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
 # WebFlux CORS Configuration
 spring.webflux.cors.allowed-origin-patterns=http://*.example.com
 spring.webflux.cors.allow-credentials=true
