--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=FinanceManagerAPI
 server.port=8442
 
-spring.datasource.url=jdbc:postgresql://16.16.91.79:5432/FinDash
+spring.datasource.url=jdbc:postgresql://localhost:5432/FinDash
 spring.datasource.username=sa
 spring.datasource.password=Goldbed@!@#
 spring.datasource.driver-class-name=org.postgresql.Driver
